<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:paddingTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_Kilometers" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price_Per_Liter" />

    <EditText
        android:id="@+id/autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:paddingTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km_Per_Liter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/value_Total"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/default_Result"
        android:textColor="@color/Light_Blue"
        android:textSize="64sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/cian"
        android:text="@string/botton_Text"
        android:textSize="20sp" />

</LinearLayout>
